# powerbrain

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Compositfile  LICENSE  README.md  SECURITY.md  SUPPORT.md  composit.config.yaml  docker-compose.ghcr.yml  docker-compose.yml  opencode.jsonc  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  setup-labels.sh
.well-known/: composit.json
caddy/: Caddyfile
demo/: Dockerfile  app.py  mcp_client.py  requirements.txt
docs/: BACKLOG.md  KNOWN_ISSUES.md  architecture.md  architektur.md  audit-chain-migration.md  bekannte-schwachstellen.md  compliance-claude-desktop.md  deployment.md  dsgvo-externe-ki-dienste.md  editions.md  gdpr-external-ai-services.md  getting-started.md  github-adapter.md  mcp-integration-checklist.md  mcp-tools.md  office365-adapter.md  pii-custom-model.md  pii-verifier.md  playbook-sales-demo.md  risk-management.md  scalability.md  skalierbarkeit.md  technologie-entscheidungen.md  technology-decisions.md  what-is-powerbrain.md
evaluation/: run_eval.py
ingestion/: Dockerfile  auth_middleware.py  backfill_layers.py  ingestion_api.py  office365.yaml.example  pii_config.yaml  pii_scanner.py  quality.py  repos.yaml.example  requirements.txt  retention_cleanup.py  snapshot_service.py  sync_service.py
init-db/: 001_schema.sql  002_privacy.sql  003_knowledge_graph.sql  004_evaluation.sql  005_versioning.sql  006_privacy_incidents.sql  007_pii_vault.sql  008_audit_rls.sql  009_add_source_type.sql  010_api_keys.sql  011_graph_sync_log.sql  012_context_layers.sql  013_oauth_persistent.sql  014_audit_hashchain.sql  015_human_oversight.sql  016_data_quality.sql  017_accuracy_monitoring.sql  018_repo_sync_state.sql  019_sync_state_delta.sql  020_viewer_role.sql  021_widen_vault_pseudonym.sql  022_audit_tail_pointer.sql  023_audit_verifier_seed_check.sql  024_audit_integrity_status.sql  025_audit_force_reset.sql  026_audit_force_reset_provenance.sql
(+322 files in other folders)
