[project]
name = "powerbrain"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = [
    "shared/tests",
    "mcp-server/tests",
    "ingestion/tests",
    "reranker/tests",
    "evaluation/tests",
    "pb-proxy/tests",
    "worker/tests",
    "tests/integration",
]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
markers = [
    "integration: requires running services (deselect with -m 'not integration')",
]
